[build-system]
requires = ["setuptools>=61.0.0", "wheel", ]
build-backend = "setuptools.build_meta"

[project]
name = "net_map"
version = "2.1"
description = "Creates network map and device list for other modules to use"
readme = "README.md"
authors = [{ name = "Katlin Sampson", email = "katlinvsampson@gmail.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["netmiko", "network", "DevNet", "NetOps"]
dependencies = [
    "netmiko>=3.4.0",
    "pyyaml",
    "networkx",
    "diffios",
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/Niltak/net_map"
"Bug Tracker" = "https://github.com/Niltak/net_map/issues"

[project.scripts]
net_map = "net_map:__init__.py"